# onnx2cpu

./: CMakeLists.txt  README.md
example/: README.md
my-notes/: CMake.md  docker.md  mlir.md  onnx-mlir.md
src/: CMakeLists.txt  func.cpp  main.cpp
tmp/: add
